--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -2,7 +2,8 @@ name: Application validation
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
