--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.75"
 config = "0.13.4"
 dotenv = "0.15.0"
 instant-acme = "0.4.1"
+openssl = "0.10.61"
 reqwest = { version = "0.11.22", features = ["json", "blocking"] }
 serde = "1.0.193"
 serde_json = "1.0.108"
